--- a/TextTwist/AndroidManifest.xml
+++ b/TextTwist/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0"?>
 <manifest 
-		package="edu.hogwarts.siesta.texttwist"
+	package="edu.hogwarts.siesta.texttwist"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-sdk   android:targetSdkVersion="29" />
+
 	<application android:icon="@drawable/icon">
 		<activity android:name=".TextTwist"
 				android:label="@string/app_name">
